@@ -1,3 +1,4 @@
+- MANTA-153 fix diploid prior
 - MANTA-150 fix SV scoring size cutoff
 - MANTA-148 check bam records for region errors
 - RNA: rna-scoring
